@@ -12,26 +12,17 @@ sub notifications {
 
   return '' unless @$notify_array;
 
-  # Start JavaScript snippet
-  my $js .= qq{<script>//<![CDATA[\n};
-  $js .= "KorAP.Notifications = [];\n";
-  my $noscript = "<noscript>";
-
-  # Add notifications
+  my $s = '';
   foreach (@$notify_array) {
-    $js .= 'KorAP.Notifications.push([';
-    $js .= quote($_->[0]) . ',' . quote($_->[-1]);
+    $s .= qq{<div class="notify notify-} . $_->[0] . '"';
+    $s .= ' data-type=' . quote($_->[0]);
     if (ref $_->[1] && ref $_->[1] eq 'HASH') {
-      $js .= ',' . quote($_->[1]->{src}) if $_->[1]->{src};
+      $s .= ' data-src=' . quote($_->[1]->{src}) if $_->[1]->{src};
     };
-    $js .= "]);\n";
-
-    $noscript .= qq{<div class="notify notify-} . $_->[0] . '">' .
-      xml_escape($_->[-1]) .
-	"</div>\n";
+    $s .= '>' . xml_escape($_->[-1]) . "</div>\n";
   };
+  return b('<noscript>' . $s . '</noscript>');
 
-  return b($js . "//]]>\n</script>\n" . $noscript . '</noscript>');
 };
 
 
